# runtime

./: CMakeLists.txt
cmake/: anydsl_runtime-config.cmake.in
include/: anydsl_runtime.h  anydsl_runtime.hpp  anydsl_runtime_config.h.in
include/extensions/: anydsl_runtime_cuda.h
src/: CMakeLists.txt  anydsl_runtime.cpp  anydsl_runtime_compatibility.cpp  anydsl_runtime_internal_config.h.in  anydsl_runtime_std.cpp  buffer.h  cache.cpp  cache.h  device.h  dummy_platform.h  event.h  jit.cpp  jit.h  jit_null.cpp  log.cpp  log.h  opencl_platform.cpp  opencl_platform.h  platform.h  runtime.cpp  runtime.h  utils.cpp  utils.h
src/cuda/: cuda_buffer.cpp  cuda_buffer.h  cuda_device.cpp  cuda_device.h  cuda_event.cpp  cuda_event.h  cuda_inc.h  cuda_platform.cpp  cuda_platform.h
src/host/: cpu_buffer.cpp  cpu_buffer.h  cpu_device.cpp  cpu_device.h  cpu_event.cpp  cpu_event.h  cpu_platform.cpp  cpu_platform.h
tools/inspector/: CMakeLists.txt  main.cpp
tools/jit/: CMakeLists.txt  main.cpp  test.art  test_cpu.art  test_cuda.art
